# NJUSE25FALL-Photo-Watermark

./: .gitignore  CONFIG_MANAGER_COMPLETION_REPORT.md  FINAL_FEATURES_SUMMARY.md  LICENSE  PROJECT_COMPLETION_REPORT.md  README.md  SCROLLBAR_UPDATE_LOG.md  comprehensive_test.py  demo.py  demo_all_features.py  demo_all_features_fixed.py  demo_config_manager.py  final_release.py  gui_app.py  main.py  pyproject.toml  requirements.txt  run_cli.py  run_gui.py  test_all_features.py  test_app.py  test_color_validation.py  test_config_manager.py  test_custom_watermark.py  test_export_features.py  test_font.py  test_font_compatibility.py  test_formats.py  test_gui.py  test_image_watermark.py  test_improved_italic.py  test_italic_opacity.py  test_realtime_preview.py  test_rotation.py  test_scrollbar.py
src/: __init__.py  config_manager.py  exif_reader.py  watermark_processor.py
test_formats/: test_tiff.tiff
